<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:background="#000">
        <Button
            android:id="@+id/backBtn_about_us"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="20sp"
            android:layout_marginStart="20dp"
            android:text="@string/about_us_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/backBtn_about_us"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">
            <ImageView
                android:id="@+id/app_icon_about_us"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@mipmap/ic_launcher_foreground"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/app_name"/>
            <TextView
                android:id="@+id/app_name_about_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="#fff"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/app_icon_about_us"/>
            <TextView
                android:id="@+id/app_version_about_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version_about_us"
                android:textColor="#fff"
                android:textSize="14sp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/app_name_about_us"/>
            <TextView
                android:id="@+id/app_slogan_about_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_slogan_about_us"
                android:textColor="#fff"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/app_version_about_us"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="200dp">
            <TextView
                android:id="@+id/update_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_history_about_us"
                android:textSize="15sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/contact_way_about_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_way_about_us"
                android:textSize="15sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/update_history"/>

            <TextView
                android:id="@+id/contact_welcome_about_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_welcome_about_us"
                android:textSize="15sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/contact_way_about_us"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_copyright_about_us"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp"/>
        </RelativeLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>